--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">TimePicker</string>
-    <string name="action_settings">Settings</string>
-    <string name="time_picker_example">Time Picker Example</string>
-    <string name="time_pick">Pick the time and press save button</string>
-    <string name="time_save">Save</string>
-    <string name="time_selected"></string>
-    <string name="time_current">The Time is:</string>
+    <string name="app_name">TimePickerDialogDemo</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_main">TimePickerDialogDemo</string>
+    <string name="str_btn_label">Set Time !!!</string>
 </resources>
